syntax = "proto3";

package prisel;
option csharp_namespace = "Prisel.Protobuf";

import "prisel/room_info.proto";

// type : GET_LOBBY_STATE,
// packet_type : RESPONSE
message GetLobbyStateResponse {
  repeated LobbyRoomViewInfo rooms = 1;

  message LobbyRoomViewInfo {
    RoomInfo room = 1;
    int32 player_count = 2;
    int32 max_players = 3;
  }
}