syntax = "proto3";

package prisel;
option csharp_namespace = "Prisel.Protobuf";

import "prisel/player_info.proto";
import "prisel/update_token.proto";

// type : ROOM_STATE_CHANGE,
// packet_type : DEFAULT
message RoomStateChangePayload {
  oneof change {
    PlayerInfo player_join = 1;
    string player_leave = 2;
    HostLeaveData host_leave = 3;
  }

  UpdateToken token = 4;

  message HostLeaveData {
    string host_id = 1;
    string new_host_id = 2;
  }
}